# overleaf-sync-rs

./: .gitignore  Cargo.toml  README.md  install.sh  output
.github/workflows/: build-and-clippy.yml  release.yml
olsync/: Cargo.toml
olsync/src/: constants.rs  custom_log.rs  main.rs
socketio-client/: client.js  package-lock.json  package.json  requirements.txt  setup.py
socketio-client/src/: client.py
src/: auth.rs  constants.rs  custom_log.rs  login.rs  login_browser.rs  main.rs  overleaf_client.rs  repository.rs  utils.rs
