[package]
name = "olsync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
colored = "2.1.0"
cookie = "0.18.1"
env_logger = "0.11.5"
fs_extra = "1.3.0"
futures-util = "0.3.30"
headless_chrome = "1.0.10"
log = "0.4.22"
reqwest = "0.12.5"
rust_socketio = { version = "0.6.0", features = ["async"] }
serde = "1.0.203"
serde_json = "1.0.117"
soup = "0.5.1"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = { version = "0.2.0-alpha.6" }
zip-extract = "0.1.3"
